Add to cart and authentication, authenrization